Bug 981869 - Blacklist crashy flump3dec gstreamer plugin - r=kinetik